# smartspeaker_a1

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.old
LED_Display/: LED_Display.ino
buttonReader/: CMakeLists.txt  sdkconfig.old
buttonReader/main/: i2c_simple_main.c
esp32_I2C_Slave/: platformio.ini
esp32_I2C_Slave/src/: main.cpp
main/: CMakeLists.txt  Kconfig.projbuild  goertzel_filter.c  goertzel_filter.h  i2c_display.c  i2c_display.h  internet_radio.c  internet_radio.h  main.c  menu.c  menu.h  sd_card_player.c  sd_card_player.h  sharedvariable.h
main/components/goertzel_filter/: CMakeLists.txt  goertzel_filter.c
main/lib/: buttonreader.c  buttonreader.h  connection_animation.c  connection_animation.h  goertzel.c  internet_radio.c  internet_radio.h  lcd_setup.c  lcd_setup.h  ntp.c  ntp.h  sd_card_player.c  sd_card_player.h  wifi_setup.c  wifi_setup.h
smart-speaker-A1-ADF/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
smart-speaker-A1-ADF/LED_Display/: LED_Display.ino
smart-speaker-A1-ADF/main/: component.mk  i2c_display.h  internet_radio.c  main.c  menu.c
smart-speaker-A1-ADF/main/lib/: buttonreader.c  buttonreader.h  ntp.c  ntp.h
